# thunder

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
crates/thunder-cli/: Cargo.toml
crates/thunder-cli/src/: doctor.rs  git.rs  main.rs  palette.rs  router.rs  scripts.rs
crates/thunder-cli/tests/: tn_aliases.rs
crates/thunder-core/: Cargo.toml
crates/thunder-core/src/: lib.rs
crates/thunder-fix/: Cargo.toml
crates/thunder-fix-rules/: Cargo.toml
crates/thunder-fix-rules/src/: lib.rs
crates/thunder-fix/src/: lib.rs
crates/thunder-index/: Cargo.toml
crates/thunder-index/benches/: index_bench.rs
crates/thunder-index/src/: lib.rs  store.rs
crates/thunder-index/tests/: daemon_integration.rs
crates/thunder-pick/: Cargo.toml
crates/thunder-pick/src/: channel.rs  lib.rs
crates/thunder-search/: Cargo.toml
crates/thunder-search/src/: files.rs  lib.rs  stream.rs
scripts/: install.sh  qa.sh
shell/: thunder.bash  thunder.fish  thunder.zsh
