[workspace]
resolver = "2"
members = [
    "crates/thunder-cli",
    "crates/thunder-core",
    "crates/thunder-fix",
    "crates/thunder-index",
    "crates/thunder-pick",
    "crates/thunder-search",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/desenyon/thunder"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
ignore = "0.4"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = { version = "5", default-features = false, features = ["frizbee"] }
thiserror = "2"
toml = "0.8"
