[package]
name = "thunder-fix"
description = "Command correction for Thunder (thefuck integration)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thunder-core = { path = "../thunder-core" }
thiserror.workspace = true
