[package]
name = "thunder-index"
description = "Incremental search index and daemon for Thunder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
ignore.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thunder-core = { path = "../thunder-core" }
thiserror.workspace = true
rayon.workspace = true
memmap2.workspace = true

[dependencies.libc]
version = "0.2"

[dev-dependencies]
tempfile = "3"
memmap2.workspace = true

[[test]]
name = "daemon_integration"
path = "tests/daemon_integration.rs"

[[bench]]
name = "index_bench"
harness = false

[[bin]]
name = "thunderd"
path = "src/bin/thunderd.rs"
required-features = []
