[package]
name = "thunder-pick"
description = "Fuzzy picker for Thunder (skim wrapper)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
skim.workspace = true
thiserror.workspace = true
